style.css
/* gneeral stuff */
body{
  background-color: rgb(158, 157, 157);
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

p{
  text-align: center;
  margin-left: 15%;
  margin-right: 15%;
  line-height: 2.0;
  font-weight: 500;
}

hr{
  width:25%;
}

.section_head{
  font-size: 40px;
  font-family: courier new;
  font-weight: bold;
  text-align: center;
}

img{
  width: 20%;
  height: 20%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding-top: 2.5%;
  padding-bottom: 2.5%;
}

/* Navigation bar */
.nav-container{
  display: flex;
  justify-content: space-between;
  position: fixed;
  top: 0px;
  background-color: white;
  opacity: 75%;
  left: 0;
  width: 100%;
}

.right-side, .left-side, .links{
  list-style-type: none;
  padding-right: 1%;
  padding-left: 1%;
  font-weight: bolder;
}

.left-side, li{
  display: inline-block;
}

.links, li{
  display: inline-block;
}

.links a{
  display: block;
  color:blue;
  padding-left:15px;
  padding-right:15px;
  justify-content: center;
}

.left-side, a{
  text-decoration: none;
  color:black;
  display: block;
}

/* Skills section CSS */
.skills_container{
  display: flex;
  justify-content: center;
}

.icon{
  border: 3px solid black;
  height: 70px;
  width: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  margin: 5px;
}

.icon:hover{
  animation: bounce .4s cubic-bezier(0.59, -0.67, 0.24, 0.79) 2;
  animation-direction: alternate;
}

@keyframes bounce{
  0%{
    transform: translateY(0);
  }
  100%{
    transform: translateY(-70px);
  }
}

/* Projects CSS */
.project_title{
  text-align: center;
  font-weight: bold;
}

.projects_wrapper{
  border-style: solid;
  border-radius: 50px;
  margin-inline: auto;
  display: flex;
  justify-content: space-between;
  width: 90%;
  padding-top: 0;
  padding-bottom: 0;
}

.projects_description{
  margin:10px;
  justify-content: left;
  width: 75%;
}

.projects_img{
  margin:10px;
  justify-content: right;
  width: 25%;
  display: flex;
}

.p1{
  text-align: center;
  margin-left: 5%;
  margin-right: 5%;
}


.devicon-javascript-plain{
  font-size: 2rem
}
.devicon-python-plain{
  font-size: 2rem
}
.devicon-c-plain{
  font-size: 2rem
}
.devicon-html5-plain{
  font-size: 2rem
}
.devicon-css3-plain{
  font-size: 2rem
}
.devicon-csharp-plain{
  font-size: 2rem
}
.devicon-java-plain{
  font-size: 2rem
}
.devicon-azuresqldatabase-plain{
  font-size: 2rem
}
.devicon-bash-plain{
  font-size: 2rem
}
.devicon-tensorflow-plain{
  font-size: 2rem
}
.devicon-pandas-plain{
  font-size: 2rem
}
.devicon-numpy-plain{
  font-size: 2rem
}
.devicon-docker-plain{
  font-size: 2rem
}
.devicon-github-plain{
  font-size: 2rem
}
.devicon-mongodb-plain{
  font-size: 2rem
}
.devicon-flask-original{
  font-size: 2rem
}
.devicon-xml-plain{
  font-size: 2rem
}
.devicon-dotnetcore-plain{
  font-size: 2rem
}

